optimized images, removed unnecessary, izenil text, added sitemap.xml, and other edits

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <span class="lang__item">Шахмати (30х30) (38х38)</span> |
-          <a href="shahi.html" class="lang__item">Шахи (52х52)</a>
+          <span class="lang__item">30х30см</span> |
+          <a href="ru.html" class="lang__item">34x34см</a>
           |
-          <a href="ru.html" class="lang__item">Шахматы 3в1 (34x34)</a>
+          <a href="shahi.html" class="lang__item">52х52см</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -92,13 +92,12 @@
           src="image/shahmaty_ua.webp"
           class="promo__img"
           width="450"
-          height="350"
+          height="254"
           itemprop="image"
           alt="шахмати гра"
         />
         <div class="promo_description" itemprop="description">
-          Замовте шахмати прямо зараз та вже завтра робіть свої вечори
-          неймовірно цікавими та виграшними!
+          Замовляй, грай та матуй всіх королів!
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
           <meta itemprop="priceCurrency" content="UAH" />
@@ -127,7 +126,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>тут можеш обрати розмір «Шахи (52х52)» або «Шахматы 3в1»</p>
+          <p>тут можеш обрати шахмати: «34х34см» або «52х52см»</p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
@@ -135,52 +134,52 @@
         <div class="wrap about__box">
           <div class="about__content">
             <h3>Ціна</h3>
-            <p>
-              Шахмати коштують 800 грн. У нас ви знайдете шахмати для гри, і ми
-              враховуємо кожне ваше замовлення, що підтверджено 800+
-              задоволеними клієнтами!
+            <p itemprop="description">
+              Коштують 800 грн. Тут «саме ті» шахмати для гри, і ми враховуємо
+              кожне ваше замовлення, що підтверджено 800+ задоволеними
+              клієнтами!
             </p>
 
             <h3>Україна</h3>
             <p>
-              В комплекті 32 великих фігури із дерева горіха, смерековими
-              планками та малюнком на березовому шпоні. Це класичний вигляд для
-              насолоди грою. Вже в Україіні!
+              Крутий набір який вже в Україні! В комплекті 32 великих фігури із
+              дерева горіха, смерековими планками та малюнком на березовому
+              шпоні.
             </p>
           </div>
           <img
             src="image/all_chess.webp"
             class="about__img"
             width="330"
-            height="300"
+            height="330"
             loading="lazy"
             itemprop="image"
-            alt="шахматні фігури"
+            alt="Шахматы игра"
           />
           <div class="about__air">
             <img
-              src="image/two-chess-figure.webp"
-              class="air__money"
-              width="80"
-              height="100"
-              loading="lazy"
-              alt="дві фігури"
-            />
-            <img
               src="image/select.webp"
-              class="air__bag"
-              width="90"
+              class="air__money"
+              width="78"
               height="100"
               loading="lazy"
-              alt="шаховий словник"
+              alt="Шахматная нотация"
             />
             <img
-              src="image/gift.webp"
+              src="image/king-figure.webp"
+              class="air__bag"
+              width="45"
+              height="120"
+              loading="lazy"
+              alt="Шахматная фигура"
+            />
+            <img
+              src="image/ruler-tool.webp"
               class="air__hat"
-              width="50"
+              width="64"
               height="130"
               loading="lazy"
-              alt="інцтрмент"
+              alt="Инструмент"
             />
           </div>
         </div>
@@ -244,7 +243,7 @@
             <img
               src="image/image_big_uk.webp"
               width="550"
-              height="413"
+              height="418"
               loading="lazy"
               alt="фото гри"
             />
@@ -252,26 +251,17 @@
           <div class="photo__content">
             <h3>В Наявності:</h3>
             <ul>
-              <span>–– 999 ГРН ––</span>
-              <li>- шахмотна доска розміром 38х38мм</li>
-              <li>- деревʼяні фігури</li>
-              <li>– пластикові шашки (подарунок)</li>
-              <br />
-              <span>–– 800 ГРН ––</span>
+              <span>–– Шахмати Дерев яні ––</span>
               <li>- шахмотна доска розміром 30х30мм</li>
               <li>- деревʼяні фігури</li>
-              <li>– пластикові шашки (подарунок)</li>
-              <br />
-              <span>-ДОДАТКОВО-</span>
-              <li>– якщо дерев яні шашки (+150 грн)</li>
-              <li>– якщо шахові фігури з пластику (дешевше)</li>
+              <li>– дерев яні шашки</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
         </div>
       </section>
       <section id="question" itemscope itemtype="http://schema.org/FAQPage">
-        <h2 class="question__title">ШАХМАТИ ПРАВИЛА</h2>
+        <h2 class="question__title">шахмати правила</h2>
         <dl class="question__list">
           <div
             class="question__item"
@@ -279,24 +269,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">шахмати розстановка</dt>
+            <dt itemprop="name">розстановка</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Розстановка фігур: король в центрі, королева поруч, слони поруч
-                з королями, коні біля слонів, та ферзі на кольорі. Легко
+                Порядок такий: король в центрі, королева поруч, слони поруч з
+                королями, коні біля слонів, та ферзі на кольорі. Легко
                 запам'ятовується абревіатурою "КССФК".
               </span>
             </dd>
             <img
-              src="image/chess-order.webp"
-              width="90"
+              src="image/horse-figure.webp"
+              width="59"
               height="80"
               loading="lazy"
-              alt="дошка з шахматами"
+              alt="Кінь"
             />
           </div>
           <div
@@ -305,7 +295,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">шахмати як грати</dt>
+            <dt itemprop="name">як грати</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -318,11 +308,11 @@
               </span>
             </dd>
             <img
-              src="image/cheess-order-figure.webp"
-              width="90"
+              src="image/two-chess-figure.webp"
+              width="65"
               height="80"
               loading="lazy"
-              alt="дошка з фігурами"
+              alt="Ферзь і слон"
             />
           </div>
           <div
@@ -331,25 +321,25 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">як ходять шахмати</dt>
+            <dt itemprop="name">як ходять</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Шахмати — це настільна стратегічна гра для двох гравців, кожен
-                має 16 шашок. Гравці рухають свої шашки по дошці з метою взяти в
-                плен короля. Гра завершується, коли один із гравців матує
+                Це настільна стратегічна гра для двох гравців, кожен має 16
+                шашок. Гравці рухають свої шашки по дошці з метою взяти в плен
+                короля. Гра завершується, коли один із гравців матує
                 супротивника.
               </span>
             </dd>
             <img
-              src="image/move-figure.webp"
-              width="86"
+              src="image/king-figure-2.webp"
+              width="47"
               height="80"
               loading="lazy"
-              alt="ход фігури"
+              alt="Король"
             />
           </div>
           <div
@@ -371,11 +361,11 @@
               </span>
             </dd>
             <img
-              src="image/tour-figure.webp"
-              width="45"
+              src="image/elephant-figure.webp"
+              width="37"
               height="80"
               loading="lazy"
-              alt="фігура тура"
+              alt="слон"
             />
           </div>
           <div
@@ -384,24 +374,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">як ходе король в шахматах</dt>
+            <dt itemprop="name">як ходе король</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Король - на одну клітину; Слон - по діагоналі; Королева -
+                Рухається на одну клітину; Слон - по діагоналі; Королева -
                 комбінація слона та тура; Конь - "Л"; Пішак - 1 або 2 клітини
                 вперед; Стратегія та передбачення ключові для гри.
               </span>
             </dd>
             <img
-              src="image/king-figure-2.webp"
-              width="45"
+              src="image/pawn-figure.webp"
+              width="42"
               height="80"
               loading="lazy"
-              alt="фігура король"
+              alt="пішак"
             />
           </div>
           <div
@@ -410,7 +400,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">як виграти в шахмати</dt>
+            <dt itemprop="name">як виграти</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -423,11 +413,11 @@
               </span>
             </dd>
             <img
-              src="image/pawn-figure-fell.webp"
-              width="110"
-              height="50"
+              src="image/tour-figure.webp"
+              width="43"
+              height="80"
               loading="lazy"
-              alt="пішак"
+              alt="тура"
             />
           </div>
         </dl>
@@ -621,7 +611,11 @@
                 placeholder="Відділеня НП або УП"
                 required
               />
-              <input type="hidden" name="title" value="Шахмати (укр)" />
+              <input
+                type="hidden"
+                name="title"
+                value="Шахмати 30х30 (2в1 Ук-версія)"
+              />
               <input type="hidden" name="price" id="price" value="800" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
@@ -655,7 +649,7 @@
     <!-- Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5ESJX0ZSVE"
+      src="https://www.googletagmanager.com/gtag/js?id=G-01MLQ4ZTBC"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -663,7 +657,7 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-      gtag('config', 'G-5ESJX0ZSVE');
+      gtag('config', 'G-01MLQ4ZTBC');
     </script>
     <!-- Hotjar Tracking Code for https://shahmatytut.com/ -->
     <script>
