--- a/ru.html
+++ b/ru.html
@@ -68,17 +68,15 @@
           <a href="#promo" class="nav__item" itemprop="url">КУПИТЬ</a>
           <a href="#about" class="nav__item" itemprop="url">ДЕРЕВЯННЫЕ</a>
           <a href="#photo" class="nav__item" itemprop="url">ФОТО</a>
-          <a href="#question" class="nav__item" itemprop="url"
-            >КАК ХОДЯТ ШАХМАТЫ</a
-          >
+          <a href="#question" class="nav__item" itemprop="url">КАК ИГРАТЬ</a>
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <a href="index.html" class="lang__item">Шахмати (30х30) (38х38)</a>
+          <a href="index.html" class="lang__item">30х30см</a>
           |
-          <a href="shahi.html" class="lang__item">Шахи (52х52см)</a>
+          <span class="lang__item">34x34см</span>
           |
-          <span class="lang__item">Шахматы 3в1 (34x34)</span>
+          <a href="shahi.html" class="lang__item">52х52см</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -91,14 +89,13 @@
         <img
           src="image/shahmaty_ru.webp"
           class="promo__img"
-          width="450"
-          height="350"
+          width="423"
+          height="290"
           itemprop="image"
           alt="шахматы игра"
         />
         <div class="promo_description" itemprop="description">
-          Здесь вы узнаете как ходят фигуры в шахматах, а если купити сейчас, то
-          уже завтра вы сможете узнать как выиграть в шахматы!
+          Игра для тех, кто стремится улучшить свои тактические навыки.
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
           <meta itemprop="priceCurrency" content="UAH" />
@@ -128,8 +125,7 @@
             alt="показать"
           />
           <p>
-            здесь можеш выбрать размер: «Шахматы (30х30) (38х38)» или «Шахматы
-            (52х52см)»
+            здесь можешь выбрать деревянные шахматы: «30х30см» или «52х52см»
           </p>
         </div>
       </section>
@@ -140,20 +136,20 @@
             <h3>Цена</h3>
             <p itemprop="description">
               Цена 900 грн. На других сайтах – шахмати ручной работы, за большие
-              суммы. У нас деревянные шахматы для игры, мы закупаем их оптом, и
-              у нас уже 800+ заказов!
+              суммы. У нас деревянные шахматы для игры, мы закупаем их оптом!
             </p>
             <h3>УКРАИНА</h3>
             <p>
-              Шахматные фигуры и доска изготовленые из дерева. Заказываем
-              напрямую у поставщика из Украины.
+              Имеем более 800+ заказов по всей Укарине! В частности: киев,
+              днепр, одесса, чернигов. Шахматные фигуры и доска изготовленые из
+              дерева.
             </p>
           </div>
           <img
-            src="image/chessboard_sketch.webp"
+            src="image/all_chess.webp"
             class="about__img"
             width="330"
-            height="300"
+            height="330"
             loading="lazy"
             itemprop="image"
             alt="Шахматы игра"
@@ -162,7 +158,7 @@
             <img
               src="image/select.webp"
               class="air__money"
-              width="69"
+              width="78"
               height="100"
               loading="lazy"
               alt="Шахматная нотация"
@@ -170,18 +166,18 @@
             <img
               src="image/king-figure.webp"
               class="air__bag"
-              width="50"
+              width="45"
               height="120"
               loading="lazy"
               alt="Шахматная фигура"
             />
             <img
-              src="image/timer_sketch.webp"
+              src="image/ruler-tool.webp"
               class="air__hat"
-              width="100"
+              width="64"
               height="130"
               loading="lazy"
-              alt="Шахматные часы"
+              alt="Инструмент"
             />
           </div>
         </div>
@@ -204,7 +200,7 @@
               <img
                 src="image/mini_1_ru.webp"
                 width="170"
-                height="128"
+                height="126"
                 loading="lazy"
                 alt="шахматы"
               />
@@ -219,7 +215,7 @@
               <img
                 src="image/mini_2_ru.webp"
                 width="170"
-                height="128"
+                height="126"
                 loading="lazy"
                 alt="сложеные шахматы"
               />
@@ -234,7 +230,7 @@
               <img
                 src="image/mini_3_ru.webp"
                 width="170"
-                height="128"
+                height="126"
                 loading="lazy"
                 alt="Разложенные шахматы"
               />
@@ -253,7 +249,7 @@
           <div class="photo__content">
             <h3>В Наличии</h3>
             <ul>
-              <span>––900 ГРН ––</span>
+              <span>––Деревянные Шахматы (34х34)––</span>
               <li>- размер шахматной доски 34x34см</li>
               <li>– шахи, шашки, нарди</li>
               <li>- деревянные шахматные фигуры</li>
@@ -265,7 +261,7 @@
         </div>
       </section>
       <section id="question" itemscope itemtype="http://schema.org/FAQPage">
-        <h2 class="question__title">как ходят фигуры в шахматах</h2>
+        <h2 class="question__title">КАК ИГРАТЬ</h2>
         <dl class="question__list">
           <div
             class="question__item"
@@ -273,80 +269,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Как ходит король в шахмата</dt>
+            <dt itemprop="name">как играть в шахматы</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Король (шах, малик, царь) в шахматах ходит на одну клетку в
-                любом направлении: вертикально, горизонтально или диагонально.
-                Он представляет собой наиболее ценную фигуру в игре, и его
-                защита является одной из основных целей в шахматной
-                стратегии.</span
-              >
-            </dd>
-            <img
-              src="image/king-figure-2.webp"
-              width="55"
-              height="80"
-              loading="lazy"
-              alt="Шахматная фигура король"
-            />
-          </div>
-          <div
-            class="question__item"
-            itemscope
-            itemprop="mainEntity"
-            itemtype="http://schema.org/Question"
-          >
-            <dt itemprop="name">Как ходит королева в шахматах?</dt>
-            <dd
-              itemprop="acceptedAnswer"
-              itemscope
-              itemtype="http://schema.org/Answer"
-            >
-              <span itemprop="text">
-                Королева (ферзя, царица, дама) в шахматах может ходить по
-                горизонтали, вертикали и диагонали на любое количество свободных
-                клеток. Это делает королеву одной из наиболее мобильных и
-                сильных фигур на шахматной доске.
-              </span>
-            </dd>
-            <img
-              src="image/queen-figure.webp"
-              width="55"
-              height="80"
-              loading="lazy"
-              alt="Шахматная фигура королева"
-            />
-          </div>
-          <div
-            class="question__item"
-            itemscope
-            itemprop="mainEntity"
-            itemtype="http://schema.org/Question"
-          >
-            <dt itemprop="name">Как ходит конь в шахматах?</dt>
-            <dd
-              itemprop="acceptedAnswer"
-              itemscope
-              itemtype="http://schema.org/Answer"
-            >
-              <span itemprop="text">
-                Конь (прыгун, рыцарь, всадник) в шахматах ходит буквой "Г": два
-                шага в одном направлении (горизонтальном или вертикальном) и
-                затем один шаг перпендикулярно этому направлению. Конь может
-                перепрыгивать через другие фигуры на доске.
+                Игроки поочередно ходят своими 16 фигурами, включая короля,
+                ферзя, слонов, коней, ладьи и пешки. Цель - поставить короля
+                противника под угрозу "шаха" и "мата".
               </span>
             </dd>
             <img
               src="image/horse-figure.webp"
-              width="55"
+              width="59"
               height="80"
               loading="lazy"
-              alt="Шахматная фигура конь"
+              alt="Конь"
             />
           </div>
           <div
@@ -355,25 +295,79 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Как ходит слон в шахматах?</dt>
+            <dt itemprop="name">как расставить</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Слон (бегун, гонец, охотник) в шахматах ходит по диагонали на
-                любое количество пустых клеток. Он остается на том же цвете
-                доски, на котором начинал движение, поэтому каждый слон
-                охватывает только половину доски.
+                Расстановка одинакова для обоих игроков. Важно, чтобы ладьи
+                стояли в углах, слоны рядом с ними, ферзь на своем цвете, а
+                король рядом с ферзем. Начальное положение фигур создает
+                стратегический баланс для обеих сторон.
+              </span>
+            </dd>
+            <img
+              src="image/two-chess-figure.webp"
+              width="65"
+              height="80"
+              loading="lazy"
+              alt="Ферзь и слон"
+            />
+          </div>
+          <div
+            class="question__item"
+            itemscope
+            itemprop="mainEntity"
+            itemtype="http://schema.org/Question"
+          >
+            <dt itemprop="name">как ходит король</dt>
+            <dd
+              itemprop="acceptedAnswer"
+              itemscope
+              itemtype="http://schema.org/Answer"
+            >
+              <span itemprop="text">
+                Король ходит на одну клетку в любом направлении: вверх, вниз,
+                влево, вправо и по диагонали. Его ход ограничен на одну клетку,
+                что делает его уязвимым. Защита короля является одной из
+                основных целей в игре.
+              </span>
+            </dd>
+            <img
+              src="image/king-figure-2.webp"
+              width="47"
+              height="80"
+              loading="lazy"
+              alt="Король"
+            />
+          </div>
+          <div
+            class="question__item"
+            itemscope
+            itemprop="mainEntity"
+            itemtype="http://schema.org/Question"
+          >
+            <dt itemprop="name">как научиться играть</dt>
+            <dd
+              itemprop="acceptedAnswer"
+              itemscope
+              itemtype="http://schema.org/Answer"
+            >
+              <span itemprop="text">
+                Ознакомьтесь с правилами и освойте шах и мат. Чтение шахматных
+                книг и анализ своих партий – залог быстрого обучения! Деревянные
+                классические шахматы, это хороший выбор для начинающих и всех
+                чтобы научиться играть.
               </span>
             </dd>
             <img
               src="image/elephant-figure.webp"
-              width="55"
+              width="37"
               height="80"
               loading="lazy"
-              alt="Шахматная фигура слон"
+              alt="слон"
             />
           </div>
           <div
@@ -382,25 +376,25 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Как бьет пешка шахматы?</dt>
+            <dt itemprop="name">Кто придумал шахматы</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Пешка (солдат, крестьянин) в шахматах атакует и захватывает
-                фигуры, расположенные на диагонали от неё. Когда она делает
-                атакующий ход, она перемещается на клетку, находящуюся на
-                диагонали вперёд.
+                Точного создателя – нету! Игра возникла в Индии и
+                эволюционировала через различные культуры. Шахматы развивались
+                на протяжении веков. Эта игра очень знаменита и всегда имеет
+                спрос.
               </span>
             </dd>
             <img
               src="image/pawn-figure.webp"
-              width="55"
+              width="42"
               height="80"
               loading="lazy"
-              alt="Шахматная фигура пешка"
+              alt="пешка"
             />
           </div>
           <div
@@ -409,7 +403,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Как выигрывать в шахматы?</dt>
+            <dt itemprop="name">Как выиграть</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -417,16 +411,17 @@
             >
               <span itemprop="text">
                 Контролируйте центр, развивайте фигуры, защищайте короля.
-                Обнаружьте слабости противника, создавайте давление. Избегайте
-                рискованных ходов.
+                Обнаружьте слабые стороны противника и создавайте давление на
+                него. Избегайте рискованных ходов. Ключ к победе, это регулярные
+                тренировки и анализ игровых сессий.
               </span>
             </dd>
             <img
-              src="image/pawn-figure-fell.webp"
-              width="100"
-              height="50"
+              src="image/tour-figure.webp"
+              width="43"
+              height="80"
               loading="lazy"
-              alt="Шахматная фигура пешка"
+              alt="тура"
             />
           </div>
         </dl>
@@ -530,19 +525,15 @@
             />
             <span class="outreach__name">МОНОПОЛИЯ</span>
           </a>
-          <a
-            href="https://elkatut.com/180sm"
-            rel="dofollow"
-            class="outreach__item"
-          >
+          <a href="https://elkatut.com/" rel="dofollow" class="outreach__item">
             <img
               src="image/elkatut_com.webp"
               width="140"
               height="200"
               loading="lazy"
-              alt="ялинка штучна"
+              alt="искусственная елка"
             />
-            <span class="outreach__name">ЯЛИНКА ШТУЧНА</span>
+            <span class="outreach__name">ИСКУССТВЕННАЯ ЕЛКА</span>
           </a>
         </div>
       </section>
@@ -622,7 +613,11 @@
                 placeholder="Отделение НП или УП"
                 required
               />
-              <input type="hidden" name="title" value="Шахматы (Ру версия)" />
+              <input
+                type="hidden"
+                name="title"
+                value="Шахматы 34х34 (3в1 Ру-версия)"
+              />
               <input type="hidden" name="price" id="price" value="900" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
@@ -656,7 +651,7 @@
     <!-- Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5ESJX0ZSVE"
+      src="https://www.googletagmanager.com/gtag/js?id=G-01MLQ4ZTBC"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -664,9 +659,9 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-      gtag('config', 'G-5ESJX0ZSVE');
+      gtag('config', 'G-01MLQ4ZTBC');
     </script>
-    <!-- Hotjar Tracking Code for https://monopolytut.com/ -->
+    <!-- Hotjar Tracking Code for https://shahmatytut.com/ru -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
