--- a/shahi.html
+++ b/shahi.html
@@ -72,15 +72,15 @@
           <a href="#promo" class="nav__item" itemprop="url">КУПИТИ</a>
           <a href="#about" class="nav__item" itemprop="url">ДЕРЕВ ЯНІ</a>
           <a href="#photo" class="nav__item" itemprop="url">ФОТО</a>
-          <a href="#question" class="nav__item" itemprop="url">ПРО ШАХИ</a>
+          <a href="#question" class="nav__item" itemprop="url">ЯК ГРАТИ</a>
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <a href="index.html" class="lang__item">Шахмати (30х30) (38х38)</a>
+          <a href="index.html" class="lang__item">30х30см</a>
           |
-          <span class="lang__item">Шахи (52х52)</span>
+          <a href="ru.html" class="lang__item">34x34см</a>
           |
-          <a href="ru.html" class="lang__item">Шахматы 3в1 (34x34)</a>
+          <span class="lang__item">52х52см</span>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -93,14 +93,13 @@
         <img
           src="image/shahy_ua.webp"
           class="promo__img"
-          width="450"
-          height="350"
+          width="437"
+          height="290"
           itemprop="image"
           alt="шахи гра"
         />
         <div class="promo_description" itemprop="description">
-          Купуйте шахи вже сьогодні та зробіть ваші вечори неймовірно насиченими
-          та цікавими!
+          Насолода грою має бути завжди – купуйте дерев яні шахи!
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
           <meta itemprop="priceCurrency" content="UAH" />
@@ -129,7 +128,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>тут можеш обрати розмір: «Шахи (30х30) (38х38)» або «Шахи 3в1»</p>
+          <p>тут можеш обрати шахи іншого розміру: «30х30» або «38х38»</p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
@@ -137,51 +136,49 @@
         <div class="wrap about__box">
           <div class="about__content">
             <h3>Ціна</h3>
-            <p>
-              Шахи коштують 1100 грн. Фігури із дерева горіха, смерековими
-              планками та малюнком на березовому шпоні. У нас шахи шашки нарди
-              для гри. Понад 800+ Замовлень!
+            <p itemprop="description">
+              Коштують 1100 грн. Фігури із дерева горіха, смерекові планки,
+              малюнком на березовому шпоні. У нас шахи шашки нарди для гри.
             </p>
             <h3>Україна</h3>
-            <p itemprop="description">
-              Шахи для початківців, шахи для дітей, шахи для всіх, тому
-              замовляйте та отримуйте в будь-якому місці України! Та вже скоро
-              ви зможете грати шахи.
+            <p>
+              Шахи для початківців, для дітей, та для всіх, тому замовляйте та
+              отримуйте в будь-якому місці України! Вже Понад 800+ Замовлень!
             </p>
           </div>
           <img
             src="image/all_chess.webp"
             class="about__img"
             width="330"
-            height="300"
+            height="330"
             loading="lazy"
             itemprop="image"
-            alt="шахові фігури "
+            alt="шахи игра"
           />
           <div class="about__air">
             <img
-              src="image/two-chess-figure.webp"
-              class="air__money"
-              width="80"
-              height="100"
-              loading="lazy"
-              alt="дві шахові фігури"
-            />
-            <img
               src="image/select.webp"
-              class="air__bag"
-              width="90"
+              class="air__money"
+              width="78"
               height="100"
               loading="lazy"
-              alt="шаховий словник"
+              alt="шахи нотация"
             />
             <img
-              src="image/gift.webp"
+              src="image/king-figure.webp"
+              class="air__bag"
+              width="45"
+              height="120"
+              loading="lazy"
+              alt="шахи фигура"
+            />
+            <img
+              src="image/ruler-tool.webp"
               class="air__hat"
-              width="50"
+              width="64"
               height="130"
               loading="lazy"
-              alt="інцтрмент"
+              alt="Инструмент"
             />
           </div>
         </div>
@@ -223,7 +220,7 @@
                 loading="lazy"
                 alt="вигляд збоку"
               />
-              <meta itemprop="name" content="монополія подарунок" />
+              <meta itemprop="name" content="відкрита коробка" />
             </li>
             <li
               class="photo__item"
@@ -253,26 +250,19 @@
           <div class="photo__content">
             <h3>В Наявності</h3>
             <ul>
-              <span>–– 1100 ГРН ––</span>
+              <span>–– Шахи Дерев яні ––</span>
               <li>– розмір у відкритому вигляді: 52х52см</li>
               <li>– дерев яні шахові фігури</li>
+              <li>– дерев яні шашки</li>
               <li>– дерев яні фішки</li>
               <li>– 2 кубика</li>
-              <li>– пластикові шашки (подарунок)</li>
-              <br />
-              <span>–– 2800 ГРН ––</span>
-              <li>+ <strong>різьблені фігури (на останьом фото)</strong></li>
-              <br />
-              <span>-ДОДАТКОВО-</span>
-              <li>– якщо дерев яні шашки (+150 грн)</li>
-              <li>– якщо шахові фігури з пластику (дешевше)</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
         </div>
       </section>
       <section id="question" itemscope itemtype="http://schema.org/FAQPage">
-        <h2 class="question__title">НАЗВИ ФІГУР В ШАХАХ</h2>
+        <h2 class="question__title">ЯК ГРАТИ</h2>
         <dl class="question__list">
           <div
             class="question__item"
@@ -293,11 +283,11 @@
               </span>
             </dd>
             <img
-              src="image/chess-order.webp"
-              width="90"
+              src="image/horse-figure.webp"
+              width="59"
               height="80"
               loading="lazy"
-              alt="дошка з шахматами"
+              alt="Кінь"
             />
           </div>
           <div
@@ -320,11 +310,11 @@
               </span>
             </dd>
             <img
-              src="image/cheess-order-figure.webp"
-              width="90"
+              src="image/two-chess-figure.webp"
+              width="65"
               height="80"
               loading="lazy"
-              alt="дошка з фігурами"
+              alt="Ферзь і слон"
             />
           </div>
           <div
@@ -333,7 +323,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">шахи як грати</dt>
+            <dt itemprop="name">як грати</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -347,11 +337,11 @@
               </span>
             </dd>
             <img
-              src="image/move-figure.webp"
-              width="86"
+              src="image/king-figure-2.webp"
+              width="47"
               height="80"
               loading="lazy"
-              alt="ход фігури"
+              alt="Король"
             />
           </div>
           <div
@@ -360,7 +350,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">цікаві факти про шахи</dt>
+            <dt itemprop="name">цікаві факти</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -373,11 +363,11 @@
               </span>
             </dd>
             <img
-              src="image/tour-figure.webp"
-              width="45"
+              src="image/elephant-figure.webp"
+              width="37"
               height="80"
               loading="lazy"
-              alt="фігура тура"
+              alt="слон"
             />
           </div>
           <div
@@ -386,7 +376,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">правила гри в шахи для дітей</dt>
+            <dt itemprop="name">правила гри для дітей</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -399,11 +389,11 @@
               </span>
             </dd>
             <img
-              src="image/king-figure-2.webp"
-              width="45"
+              src="image/pawn-figure.webp"
+              width="42"
               height="80"
               loading="lazy"
-              alt="фігура король"
+              alt="пішак"
             />
           </div>
           <div
@@ -412,7 +402,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">гра у шахи</dt>
+            <dt itemprop="name">шахи це</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -426,11 +416,11 @@
               </span>
             </dd>
             <img
-              src="image/pawn-figure-fell.webp"
-              width="110"
-              height="50"
+              src="image/tour-figure.webp"
+              width="43"
+              height="80"
               loading="lazy"
-              alt="пішак"
+              alt="тура"
             />
           </div>
         </dl>
@@ -553,7 +543,7 @@
     </main>
     <div id="modal">
       <div class="modal__content">
-        <h2 class="modal__title">Замовити Монополію</h2>
+        <h2 class="modal__title">Замовити Шахи</h2>
         <div class="wrap modal__box">
           <div class="modal__choice">
             <strong>Оплата:</strong>
@@ -629,9 +619,9 @@
               <input
                 type="hidden"
                 name="title"
-                value="Монополія (банк без меж)"
+                value="Шахи 52х52 (3в1 Ук-версія)"
               />
-              <input type="hidden" name="price" id="price" value="590" />
+              <input type="hidden" name="price" id="price" value="1100" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
               <input type="submit" value="Готово" />
@@ -664,7 +654,7 @@
     <!-- Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5ESJX0ZSVE"
+      src="https://www.googletagmanager.com/gtag/js?id=G-01MLQ4ZTBC"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -672,9 +662,9 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-      gtag('config', 'G-5ESJX0ZSVE');
+      gtag('config', 'G-01MLQ4ZTBC');
     </script>
-    <!-- Hotjar Tracking Code for https://monopolytut.com/ -->
+    <!-- Hotjar Tracking Code for https://shahmatytut.com/shahi -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
